# Forex_Trading

./: .gitignore  .pre-commit-config.yaml  1.2.2  404.html  Data_Collect_32.sln  Model_test.ipynb  UpgradeLog.htm  dockerfile  index.html  input_data.txt  mkdocs.yaml  model.pkl  open_trading_porject.sh  openapi.json  pyproject.toml  requirements.txt  requirements_docs.txt  setup.py  test.ipynb  test_scoring.ipynb  train.py
.github/workflows/: mkdocs.yaml
Data_Collect_32/: Data_Collect_32.cs  Model_test.ipynb  dockerfile  mkdocs.yaml  model.pkl  openapi.json  run_hook.py  setup.py
Data_Collect_32/conf/: config.yaml
Data_Collect_32/data/: Data_collect_32.csv  backup1.csv
Data_Collect_32/deploy/: model.pkl  scoring_script.py  test.ipynb  test_scoring.py
Data_Collect_32/docs/: index.md  openapi.json  test.md
Data_Collect_32/notebooks/: data_exploration.ipynb  hydra_test.ipynb  lstm_test.ipynb  pipeline_test.ipynb  testdf.json
Data_Collect_32/site/: 404.html  index.html  search.html
Data_Collect_32/src/: pipeline_test.ipynb  scikit_learn_pipeline.html  test.ipynb  testdf.json  train.py
SwaggerAPI/: index.html  swagger-f59163c5.html
conf/: config.yaml
deploy/: input_data.txt  model.pkl  scoring_script.py  test_scoring.py
docs/: home.md  index.md  indicators.md
forex_trader/Data_Collect_32.egg-info/: PKG-INFO
forex_trader/Evaluate/: density.py  pips.py
forex_trader/Model/: SklearnPipeline.py  booster.py  (+1 more)
indicators/: index.html
notebooks/: Model_test.ipynb  label_explore.ipynb
search/: search_index.json
src/: model.pkl  pipeline.html  train.py
(+235 files in other folders)
